add hosts manager support