@@ -1,3 +1,5 @@
+import org.gradle.api.tasks.testing.logging.TestLogEvent
+
 buildscript {
     repositories {
         mavenLocal()
@@ -21,6 +23,15 @@ version = loadVersion()
 
 subprojects {
     apply plugin: 'java-library'
+    apply plugin: 'maven-publish'
+    apply plugin: 'signing'
+
+    group = 'io.vproxy'
+    version = loadVersion()
+
+    tasks.withType(GenerateModuleMetadata) {
+        enabled = false
+    }
 
     repositories {
         mavenLocal()
@@ -34,28 +45,39 @@ subprojects {
 
     tasks.withType(JavaCompile) {
         options.encoding = "UTF-8"
-        options.incremental = false
         options.compilerArgs += '--enable-preview'
     }
     tasks.withType(JavaExec) {
         jvmArgs += '--enable-preview'
         jvmArgs += '--enable-native-access=ALL-UNNAMED'
     }
+    tasks.withType(Test) {
+        jvmArgs += '--enable-preview'
+        jvmArgs += '--enable-native-access=ALL-UNNAMED'
 
-    task javadocJar(type: Jar) {
-        archiveClassifier = 'javadoc'
-        from "$buildDir/docs/javadoc"
+        testLogging {
+            events TestLogEvent.FAILED, TestLogEvent.PASSED, TestLogEvent.SKIPPED, TestLogEvent.STARTED
+            maxGranularity 100
+            exceptionFormat "full"
+            showCauses true
+            showExceptions true
+            showStackTraces true
+        }
     }
 
-    def releaseProjects = ['core']
+    def releaseProjects = ['core', 'HostsManager']
     if (releaseProjects.contains(project.name)) {
+        task javadocJar(type: Jar) {
+            archiveClassifier = 'javadoc'
+            from "$buildDir/docs/javadoc"
+        }
         publishing {
             publications {
                 maven(MavenPublication) {
                     from components.java
-                    artifactId 'divert-java-' + project.name
 
                     artifact(javadocJar)
+                    artifactId 'divert-java-' + project.name.toLowerCase()
 
                     pom {
                         name = 'divert-java-' + project.name
@@ -137,18 +159,21 @@ project(':core') {
     }
     dependencies {
         api group: 'io.vproxy', name: 'pni-api-jdk21', version: PNI_VERSION
-        api group: 'io.vproxy', name: 'commons', version: '1.2.2'
+        api group: 'io.vproxy', name: 'commons', version: '1.3.2'
+    }
+}
+
+project(':HostsManager') {
+    dependencies {
+        api project(':core')
     }
 }
 
 project(':test') {
     dependencies {
         implementation project(':core')
+        implementation project(':HostsManager')
         testImplementation group: 'junit', name: 'junit', version: '4.12'
-    }
-
-    test {
-        useJUnitPlatform()
     }
 
     task runPoc(type: JavaExec) {
